forgot to link nav links to sections

--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#">Trailer</a>
+                        <a href="#trailer">Trailer</a>
                     </li>
                     <li>
-                        <a href="#">Characters</a>
+                        <a href="#characers">Characters</a>
                     </li>
                     <li>
-                        <a href="#">Soundtrack</a>
+                        <a href="#soundtrack">Soundtrack</a>
                     </li>
                 </ul>
             </div>
